# freecheck

./: .gitignore  AUTHORS.md  CHANGELOG  ChangeLog  NEWS  README-CGI.md  README.md  TODO.md  WARNING.md  add_fonts.sh  build.sh  freecheck  freecheck.cfg  freecheck.pl  freecheck.py  freecheck.toml  freecheck_formats.ps  freecheck_program.ps  pyproject.toml  setup.py  setup.sh  test_requirements.txt
freecheck/: __init__.py  freecheckprinter.py  freecheckprintermain.py
freecheck/postscript/: freecheck_header.ps
lib/freecheck/: __init__.py  freecheckprinter.py  freecheckprintermain_test.py
